nextstrain/auspice/auspice-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auspice-ingress
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /
        backend:
          serviceName: auspice-svc
          servicePort: 80
